--- a/content/week15~18.html
+++ b/content/week15~18.html
@@ -155,7 +155,13 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">week10~14 << <a href='week10~14.html'>Previous</a> <a href='Assignment.html'>Next</a> >> Assignment<br /><h1>week15~18</h1>
-<br />week10~14 << <a href='week10~14.html'>Previous</a> <a href='Assignment.html'>Next</a> >> Assignment</div>
+<p><strong>week15</strong></p>
+<p>mini project-b15</p>
+<p>cdbw15-2 倉儲:<a href="https://github.com/mdecourse/cdbw15-2">https://github.com/mdecourse/cdbw15-2</a></p>
+<p>cdbw15-2 網站:<a href="http://mde.tw/cdbw15-2/content/index.html">http://mde.tw/cdbw15-2/content/index.html</a></p>
+<p><strong>week16</strong></p>
+<p>每人進行ipv6對外連線並連結到個人特定的proxy</p>
+<p>連結:<a href="https://[2001:288:6004:17:2020:2:0:7206]:19443">https://[2001:288:6004:17:2020:2:0:7206]:19443/</a></p><br />week10~14 << <a href='week10~14.html'>Previous</a> <a href='Assignment.html'>Next</a> >> Assignment</div>
         
     <!-- footer -->
       <div class="container">
