--- a/content/week6~9.html
+++ b/content/week6~9.html
@@ -327,8 +327,94 @@ img.add_border {
 <li>Injection Molding magazine, May 1998 issue, R. Cramer of Dow Materials Engineering Center</li>
 </ol>
 <p><strong><span></span></strong></p>
-<p><em><strong>四輪車馬達驅動設定影片:</strong></em></p>
+<p><em><strong>四輪車馬達驅動設定</strong></em></p>
+<p><em></em>建立一台基本四輪車，並加入馬達驅動直行</p>
+<p><em><strong>影片:</strong></em></p>
 <p><em><strong><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/mu8TeOt6J4E" width="560"></iframe></strong></em></p>
+<p></p>
+<p><em><strong><span color="#000000">四輪車馬達設定及鍵盤控制加速及轉彎</span></strong></em></p>
+<p><span color="#000000"><span data-contrast="auto"><span data-wac-het="1">1.先add&lt;primitive shape&lt;</span><span data-wac-het="1">導入車體形狀</span></span><span data-ccp-props="{}" data-wac-het="1"> </span></span></p>
+<p><span color="#000000"><span data-ccp-props="{}" data-wac-het="1"><span data-contrast="auto"><span data-wac-het="1">2.調整位置</span></span></span></span></p>
+<p><span data-contrast="auto"><span data-wac-het="1">3.</span></span><span data-contrast="none"><span data-wac-het="1">藉由勾選motor properties以啟動馬達，並可以藉由調整轉動速度和力矩達到所想要馬達轉動之效果，底下的lock motor when target velocity is zero</span></span><span data-contrast="auto"><span data-wac-het="1">則可以使馬達速度為零時鎖定住馬達</span></span></p>
+<p><span data-contrast="auto"><span data-wac-het="1">4.檢查碰撞，</span></span><span data-contrast="auto"><span data-wac-het="1">物件的動力學設定也必須要設定好，如下方所示物體的碰撞和物體的動態都必須打開，才能使剛剛設定好的馬達進行對輪胎的帶動</span></span><span data-ccp-props="{}" data-wac-het="1"> </span></p>
+<p><span data-ccp-props="{}" data-wac-het="1"><span>5.貼上撰寫好的鍵盤控制轉彎程式</span></span></p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">function sysCall_init() 
+    left_front_handle= sim.getObjectHandle('left_m')
+    left_back_handle= sim.getObjectHandle('left_m')
+    right_back_handle= sim.getObjectHandle('right_m')
+    right_front_handle= sim.getObjectHandle('right_m')
+    MaxVel=2
+    leftvelocity=0
+    rightvelocity=0
+    dVel=0.5;
+    --sim.setJointTargetVelocity(left_front_handle,leftvelocity)
+    sim.setJointTargetVelocity(left_back_handle,leftvelocity)
+    sim.setJointTargetVelocity(right_back_handle,rightvelocity)
+    --sim.setJointTargetVelocity(right_front_handle,rightvelocity)
+end
+ 
+function sysCall_actuation() 
+    message,auxiliaryData=sim.getSimulatorMessage()
+    while message~=-1 do
+        if (message==sim.message_keypress) then
+            if (auxiliaryData[1]==32) then
+                -- right key
+                leftvelocity=0
+                rightvelocity=0
+                sim.setJointForce(left_front_handle, 0)
+                sim.setJointForce(left_back_handle, 0)
+                sim.setJointForce(right_back_handle, 0)
+                sim.setJointForce(right_front_handle, 0)
+                break
+            else
+                --sim.setJointForce(left_front_handle, 10000)
+                sim.setJointForce(left_back_handle, 10000)
+                sim.setJointForce(right_back_handle, 10000)
+                --sim.setJointForce(right_front_handle, 10000)
+            end
+            if (auxiliaryData[1]==2007) then
+                -- up key
+                leftvelocity=(leftvelocity+rightvelocity)/2
+                rightvelocity=leftvelocity
+                leftvelocity=leftvelocity+dVel
+                rightvelocity=rightvelocity+dVel
+            end
+            if (auxiliaryData[1]==2008) then
+                -- down key
+                leftvelocity=(leftvelocity+rightvelocity)/2
+                rightvelocity=leftvelocity
+                leftvelocity=leftvelocity-dVel
+                rightvelocity=rightvelocity-dVel
+            end
+            if (auxiliaryData[1]==2009) then
+                -- left key
+                leftvelocity=leftvelocity-dVel
+                rightvelocity=rightvelocity+dVel
+            end
+            if (auxiliaryData[1]==2010) then
+                -- right key
+                leftvelocity=leftvelocity+dVel
+                rightvelocity=rightvelocity-dVel
+            end
+        end
+        message,auxiliaryData=sim.getSimulatorMessage()
+    end
+     
+    if leftvelocity&gt;MaxVel then
+        leftvelocity=MaxVel
+    end
+    if leftvelocity&lt;-maxvel then="" leftvelocity="-MaxVel" end="" if="" rightvelocity=""&gt;MaxVel then
+                rightvelocity=MaxVel
+    end
+ 
+    --sim.setJointTargetVelocity(left_front_handle,leftvelocity)
+    sim.setJointTargetVelocity(left_back_handle,leftvelocity)
+    sim.setJointTargetVelocity(right_back_handle,rightvelocity)
+    --sim.setJointTargetVelocity(right_front_handle,rightvelocity)
+ 
+end</pre>
+<p><em><strong>操作影片:</strong></em></p>
+<p><em><strong><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/nmn0ZCo9q-I" width="560"></iframe></strong></em></p>
 <p><strong>week8</strong></p>
 <p><span><strong><span color="#000000">安裝以下三個模組</span></strong></span></p>
 <p>1.pip install opencv-python</p>
@@ -337,8 +423,7 @@ img.add_border {
 <p><img alt="" height="280" src="./../images/chrome_2020-05-23_23-24-49.png" width="596"/></p>
 <p><strong><em>第三次線上會議</em></strong></p>
 <p>1.成員簽到等候 <br/>2.分工作業進度回報及問題討論 <br/>3.有問題的同學提出問題 <br/> <br/>成員名單 <br/>1.40723201 (簽) 已建立完成網站 <br/>2.40723206 (簽) 已建立完成網站 小組長 <br/>3.40723213 (簽) 已建立完成網站 <br/>4.40723216 (簽) 已建立完成網站 <br/>5. 40723223(簽) 已建立完成網站 <br/>6.40723226 () 已建立完成網站 <br/>7.40723229 (簽) 已建立完成網站 小組長 <br/>8.40723230 (簽) 已建立完成網站 <br/>9.40723241 (簽) 已建立完成網站 <br/>10.40723242 () 已建立完成網站 小組長 <br/>11.40723246 (group leader) (簽) 已建立完成網站 <br/>12.40732319 () <br/> <br/>※作業一(4 輪車) <br/>*根據主題 0 和主題 1 的素材，您能否具體描述機械設計團隊，為了完成作業四輪機 器人需要做些什麼? <br/> <br/><span style="color: #ff0000;">四輪車馬達設定及鍵盤控制加速及轉彎</span></p>
-<p></p>
-<br />week1~5 << <a href='week1~5.html'>Previous</a> <a href='week10~14.html'>Next</a> >> week10~14</div>
+<p></p><br />week1~5 << <a href='week1~5.html'>Previous</a> <a href='week10~14.html'>Next</a> >> week10~14</div>
         
     <!-- footer -->
       <div class="container">
