--- a/config/content.htm
+++ b/config/content.htm
@@ -7,6 +7,8 @@
 <p></p>
 <p>之後若要以 git clone 取下包含 submodule 的所有內容, 執行:</p>
 <p>git clone --recurse-submodules <a href="https://github.com/mdecourse/newcms.git">https://github.com/mdecourse/newcms.git</a></p>
+<h1>期末報告</h1>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/0uA_XxiA71o" width="560"></iframe></p>
 <h1>weeks</h1>
 <h2>week1~5</h2>
 <p><strong>week1</strong></p>
@@ -392,7 +394,8 @@ end</pre>
 <p><img alt="" height="280" src="/images/chrome_2020-05-23_23-24-49.png" width="596"/></p>
 <p><strong><em>第三次線上會議</em></strong></p>
 <p>1.成員簽到等候 <br/>2.分工作業進度回報及問題討論 <br/>3.有問題的同學提出問題 <br/> <br/>成員名單 <br/>1.40723201 (簽) 已建立完成網站 <br/>2.40723206 (簽) 已建立完成網站 小組長 <br/>3.40723213 (簽) 已建立完成網站 <br/>4.40723216 (簽) 已建立完成網站 <br/>5. 40723223(簽) 已建立完成網站 <br/>6.40723226 () 已建立完成網站 <br/>7.40723229 (簽) 已建立完成網站 小組長 <br/>8.40723230 (簽) 已建立完成網站 <br/>9.40723241 (簽) 已建立完成網站 <br/>10.40723242 () 已建立完成網站 小組長 <br/>11.40723246 (group leader) (簽) 已建立完成網站 <br/>12.40732319 () <br/> <br/>※作業一(4 輪車) <br/>*根據主題 0 和主題 1 的素材，您能否具體描述機械設計團隊，為了完成作業四輪機 器人需要做些什麼? <br/> <br/><span style="color: #ff0000;">四輪車馬達設定及鍵盤控制加速及轉彎</span></p>
-<p></p><h2>week10~14</h2>
+<p></p>
+<h2>week10~14</h2>
 <p><strong>week10</strong></p>
 <p><em><strong>對ssh連線</strong></em></p>
 <p>(1)到y槽的portablegit將sh_for_solvespace檔案複製並修改成sh.exe</p>
@@ -502,14 +505,16 @@ Host github.com
 <p></p>
 <p>mini project-b14</p>
 <p>cdbw14-1 倉儲:<a href="https://github.com/mdecourse/cdbw14-1">https://github.com/mdecourse/cdbw14-1</a></p>
-<p>cdbw14-1 網站:<a href="http://mde.tw/cdbw14-1/content/index.html">http://mde.tw/cdbw14-1/content/index.html</a></p><h2>week15~18</h2>
+<p>cdbw14-1 網站:<a href="http://mde.tw/cdbw14-1/content/index.html">http://mde.tw/cdbw14-1/content/index.html</a></p>
+<h2>week15~18</h2>
 <p><strong>week15</strong></p>
 <p>mini project-b15</p>
 <p>cdbw15-2 倉儲:<a href="https://github.com/mdecourse/cdbw15-2">https://github.com/mdecourse/cdbw15-2</a></p>
 <p>cdbw15-2 網站:<a href="http://mde.tw/cdbw15-2/content/index.html">http://mde.tw/cdbw15-2/content/index.html</a></p>
 <p><strong>week16</strong></p>
 <p>每人進行ipv6對外連線並連結到個人特定的proxy</p>
-<p>連結:<a href="https://[2001:288:6004:17:2020:2:0:7206]:19443">https://[2001:288:6004:17:2020:2:0:7206]:19443/</a></p><h1>Assignment</h1>
+<p>連結:<a href="https://[2001:288:6004:17:2020:2:0:7206]:19443">https://[2001:288:6004:17:2020:2:0:7206]:19443/</a></p>
+<h1>Assignment</h1>
 <h2>assignment1</h2>
 <h3>Random Grouping</h3>
 <div class="syntaxhighlighter py">要進行隨機分組及隨機點名，必須先了解程式裡導入的模組及在模組中所用的<br/>語法、迴圈:<span>request</span>、<span>ast.literal_eval</span>、<span>random</span>、<span>for</span>迴圈<br/><br/>(1)<span> request</span>模組:此模組是為了可以使用 Python 來下載網頁上的資料，是以<br/><span>request</span>模組建立適當的 HTTP 請求，透過 HTTP 請求從網頁伺服器下載<br/>指定的資料，分為兩種模式Post、Get。<br/><br/>參考文獻:<span> </span><a href="https://ithelp.ithome.com.tw/articles/10206215"><span>https://ithelp.ithome.com.tw/articles/10206215</span><br/></a><br/>(2)<span> </span><span>ast</span>模組: 此模組是python原始碼到位元組碼的一種中間產物，藉助<span>ast</span><br/>模組可以從語法樹的角度分析原始碼結構，其中的語法<span>ast.literal_eval</span><br/>是為了能夠安全地評估表達式節點或包含Python文字或容器顯示的字符<br/>串。提供的字符串或節點只能由以下Python文字結構組成：字符串、字<br/>節、數字、元組、列表、字典、集合、布林值、None。<br/><br/>參考文獻:<span> </span><a href="https://docs.python.org/3/library/ast.html"><span>https://docs.python.org/3/library/ast.html</span></a><br/><span><a href="https://www.itread01.com/content/1544847254.html">https://www.itread01.com/content/1544847254.html<br/></a></span><br/>(3)<span> </span><span>random</span>模組:此模組用於生成偽隨機數，且有許多種用法，例如:隨機選取<br/><span>choice</span>、隨機選取<span> sample</span><span> </span>(一次選多筆資料)、隨機調換順序<span> shuffle</span><span> </span>(就<br/>地調換順序)、隨機取得亂數<span> </span><span>random</span><span> </span>(0~1之間的隨機亂數)、隨機取得亂<br/>數<span> </span><span>uniform</span><span> </span>(可以指定範圍)。<br/><br/>參考文獻:<span> </span><a href="https://ithelp.ithome.com.tw/articles/10207483"><span>https://ithelp.ithome.com.tw/articles/10207483</span><br/></a><br/>(4)<span> </span><span>for</span>迴圈: 在處理資料的時候，時常會需要重複執行某些相同的步驟；而迴<br/>圈 (loop) 的作用是讓指定的某段敘述在條件符合的情況下一直重覆執行，<br/>是程式設計中很重要的一種控制結構，且分為兩類:<span>for</span>、<span>while</span></div>
