--- a/content/group-cd2020bg1.html
+++ b/content/group-cd2020bg1.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='group-cd2020bg1.html'>group-cd2020bg1</a><li class='has-children'><a href='weeks.html'>weeks</a><ul class='dropdown'><li><a href='week1~5.html'>week1~5</a><li><a href='week6~9.html'>week6~9</a><li><a href='week10~14.html'>week10~14</a><li><a href='week15~18.html'>week15~18</a></li></ul><li class='has-children'><a href='Assignment.html'>Assignment</a><ul class='dropdown'><li class='has-children'><a href='assignment1.html'>assignment1</a><ul class='dropdown'><li><a href='Random Grouping.html'>Random Grouping</a><li><a href='Potable System.html'>Potable System</a><li><a href='Four Wheel Car.html'>Four Wheel Car</a></li></ul><li class='has-children'><a href='assignment2.html'>assignment2</a><ul class='dropdown'><li><a href='IndustrialAndEngineeringProductDesignCollaboration.html'>IndustrialAndEngineeringProductDesignCollaboration</a><li><a href='DesignCollaborationBetterProducts.html'>DesignCollaborationBetterProducts</a><li><a href='MechanicalDesignProcess thirth segment.html'>MechanicalDesignProcess thirth segment</a><li><a href='MechanicalDesignProcess first segment.html'>MechanicalDesignProcess first segment</a></li></ul><li class='has-children'><a href='assignment3.html'>assignment3</a><ul class='dropdown'><li><a href='MSModelingAndTFApproach.html'>MSModelingAndTFApproach</a><li><a href='MechaFutureAndChallenges.html'>MechaFutureAndChallenges</a></li></li></ul></ul><li><a href='Develop.html'>Develop</a></li>
+                     <li><a href='group-cd2020bg1.html'>group-cd2020bg1</a><li><a href='期末報告.html'>期末報告</a><li class='has-children'><a href='weeks.html'>weeks</a><ul class='dropdown'><li><a href='week1~5.html'>week1~5</a><li><a href='week6~9.html'>week6~9</a><li><a href='week10~14.html'>week10~14</a><li><a href='week15~18.html'>week15~18</a></li></ul><li class='has-children'><a href='Assignment.html'>Assignment</a><ul class='dropdown'><li class='has-children'><a href='assignment1.html'>assignment1</a><ul class='dropdown'><li><a href='Random Grouping.html'>Random Grouping</a><li><a href='Potable System.html'>Potable System</a><li><a href='Four Wheel Car.html'>Four Wheel Car</a></li></ul><li class='has-children'><a href='assignment2.html'>assignment2</a><ul class='dropdown'><li><a href='IndustrialAndEngineeringProductDesignCollaboration.html'>IndustrialAndEngineeringProductDesignCollaboration</a><li><a href='DesignCollaborationBetterProducts.html'>DesignCollaborationBetterProducts</a><li><a href='MechanicalDesignProcess thirth segment.html'>MechanicalDesignProcess thirth segment</a><li><a href='MechanicalDesignProcess first segment.html'>MechanicalDesignProcess first segment</a></li></ul><li class='has-children'><a href='assignment3.html'>assignment3</a><ul class='dropdown'><li><a href='MSModelingAndTFApproach.html'>MSModelingAndTFApproach</a><li><a href='MechaFutureAndChallenges.html'>MechaFutureAndChallenges</a></li></li></ul></ul><li><a href='Develop.html'>Develop</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,7 +154,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='weeks.html'>Next</a> >> weeks<br /><h1>group-cd2020bg1</h1>
+    <div id="tipue_search_content"> <a href='期末報告.html'>Next</a> >> 期末報告<br /><h1>group-cd2020bg1</h1>
 <p><strong>cd2020-bg1分組網站:</strong><a href="https://s40723246.github.io/cd2020-bg1/content/index.html" rel="nofollow">https://s40723246.github.io/cd2020-bg1/content/index.html</a></p>
 <p><strong>member:</strong></p>
 <p></p>
@@ -163,7 +163,7 @@ img.add_border {
 <p></p>
 <p>之後若要以 git clone 取下包含 submodule 的所有內容, 執行:</p>
 <p>git clone --recurse-submodules <a href="https://github.com/mdecourse/newcms.git">https://github.com/mdecourse/newcms.git</a></p>
-<br /> <a href='weeks.html'>Next</a> >> weeks</div>
+<br /> <a href='期末報告.html'>Next</a> >> 期末報告</div>
         
     <!-- footer -->
       <div class="container">
