--- a/content/期末報告.html
+++ b/content/期末報告.html
@@ -154,8 +154,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Four Wheel Car << <a href='Four Wheel Car.html'>Previous</a> <a href='IndustrialAndEngineeringProductDesignCollaboration.html'>Next</a> >> IndustrialAndEngineeringProductDesignCollaboration<br /><h1>assignment2</h1>
-<br />Four Wheel Car << <a href='Four Wheel Car.html'>Previous</a> <a href='IndustrialAndEngineeringProductDesignCollaboration.html'>Next</a> >> IndustrialAndEngineeringProductDesignCollaboration</div>
+    <div id="tipue_search_content">group-cd2020bg1 << <a href='group-cd2020bg1.html'>Previous</a> <a href='weeks.html'>Next</a> >> weeks<br /><h1>期末報告</h1>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/0uA_XxiA71o" width="560"></iframe></p>
+<br />group-cd2020bg1 << <a href='group-cd2020bg1.html'>Previous</a> <a href='weeks.html'>Next</a> >> weeks</div>
         
     <!-- footer -->
       <div class="container">
